sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:52: error: ')' expected but ':' found.
def pos2index(pos:Array[Int]:Int = {
                            ^SelectBaseball:58: error: ';' expected but 'def' found.
def getTrouIndex():Int = {
^